[CREATED] - Create API add new course

--- a/src/main/resources/messages_en_us.properties
+++ b/src/main/resources/messages_en_us.properties
@@ -2,4 +2,8 @@
 message.token.InvalidToken= Invalid Token!
 
 #User
-message.user.NotFound = Username {0} or password wrong!
+message.user.Wrong = Username {0} or password wrong!
+message.user.Invalid = User invalid!
+
+#User
+message.course.exists = Course {0} was existed!
