--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,9 @@
 message.token.InvalidToken= Invalid Token!
 
 #User
-message.user.NotFound = Username {0} or password wrong!
+message.user.Wrong = Username {0} or password wrong!
+message.user.Invalid = User invalid!
+message.user.NotFound = User not found!
+
+#User
+message.course.exists = Course {0} was existed!
