[FIX BUG] - API open course

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,5 +6,10 @@ message.user.Wrong = Username {0} or password wrong!
 message.user.Invalid = User invalid!
 message.user.NotFound = User not found!
 
-#User
+#Course
 message.course.exists = Course {0} was existed!
+message.course.NotFound = Course not found!
+
+#Semester
+message.semester.NotFound = Semester not found!
+message.semester.Invalid = Semester Invalid!
