--- a/src/main/resources/messages_en_us.properties
+++ b/src/main/resources/messages_en_us.properties
@@ -4,6 +4,12 @@ message.token.InvalidToken= Invalid Token!
 #User
 message.user.Wrong = Username {0} or password wrong!
 message.user.Invalid = User invalid!
+message.user.NotFound = User not found!
 
-#User
+#Course
 message.course.exists = Course {0} was existed!
+message.course.NotFound = Course not found!
+
+#Semester
+message.semester.NotFound = Semester not found!
+message.semester.Invalid = Semester Invalid!
