--- a/src/main/resources/messages_en_us.properties
+++ b/src/main/resources/messages_en_us.properties
@@ -11,5 +11,6 @@ message.course.exists = Course {0} was existed!
 message.course.NotFound = Course not found!
 
 #Semester
+message.semester.exists = Semester {0} was existed!
 message.semester.NotFound = Semester not found!
 message.semester.Invalid = Semester Invalid!
