[CREATE] - Create API class management

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,8 @@ message.course.NotFound = Course not found!
 message.semester.exists = Semester {0} was existed!
 message.semester.NotFound = Semester not found!
 message.semester.Invalid = Semester Invalid!
+
+#Class
+message.class.exists = Class {0} was existed!
+message.class.NotFound = Class not found!
+message.class.Invalid = Class Invalid!
