[UPDATE] - Update api search class

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,4 @@ message.semester.Invalid = Semester Invalid!
 message.class.exists = Class {0} was existed!
 message.class.NotFound = Class not found!
 message.class.Invalid = Class Invalid!
+message.class.notDeleted = Class can not deleted!
