[UPDATE] - Update search api, CRUD semester

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ message.course.NotFound = Course not found!
 message.semester.exists = Semester {0} was existed!
 message.semester.NotFound = Semester not found!
 message.semester.Invalid = Semester Invalid!
+message.semester.NotDeleted = Semester can not deleted!
 
 #Class
 message.class.exists = Class {0} was existed!
