[FIX BUG] - Fix some bug open course

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,9 +15,13 @@ message.semester.exists = Semester {0} was existed!
 message.semester.NotFound = Semester not found!
 message.semester.Invalid = Semester Invalid!
 message.semester.NotDeleted = Semester can not deleted!
+message.semester.ExistTime = This time exist semester
 
 #Class
 message.class.exists = Class {0} was existed!
 message.class.NotFound = Class not found!
 message.class.Invalid = Class Invalid!
 message.class.notDeleted = Class can not deleted!
+
+#OpenCourse
+message.openCourse.NotFound = Request Open Course not found!
