--- a/src/main/resources/messages_en_us.properties
+++ b/src/main/resources/messages_en_us.properties
@@ -6,6 +6,10 @@ message.user.Wrong = Username {0} or password wrong!
 message.user.Invalid = User invalid!
 message.user.NotFound = User not found!
 
+#Student
+message.student.fullCourse = Full course in this semester!
+message.student.Registered = Exist course was registered before!
+
 #Course
 message.course.exists = Course {0} was existed!
 message.course.NotFound = Course not found!
@@ -25,3 +29,4 @@ message.class.notDeleted = Class can not deleted!
 
 #OpenCourse
 message.openCourse.NotFound = Request Open Course not found!
+
