--- a/src/main/resources/messages_en_us.properties
+++ b/src/main/resources/messages_en_us.properties
@@ -29,4 +29,5 @@ message.class.notDeleted = Class can not deleted!
 
 #OpenCourse
 message.openCourse.NotFound = Request Open Course not found!
+message.openCourse.FullSize = Request Open Course full size register!
 
