--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ message.user.NotFound = User not found!
 #Student
 message.student.fullCourse = Full course in this semester!
 message.student.Registered = Exist course was registered before!
+message.student.PaymentResolved = Student was resolved this payment!
 
 #Course
 message.course.exists = Course {0} was existed!
