[UPDATE] - Update confirm tuition

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,3 +32,7 @@ message.class.notDeleted = Class can not deleted!
 message.openCourse.NotFound = Request Open Course not found!
 message.openCourse.FullSize = Request Open Course full size register!
 
+#Tuition
+message.tuition.NotFound = Request fee not found!
+message.tuition.IsCompleted = Request fee completed
+
