[CREATE] - Create api create student

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ message.token.InvalidToken= Invalid Token!
 message.user.Wrong = Username {0} or password wrong!
 message.user.Invalid = User invalid!
 message.user.NotFound = User not found!
+message.user.Exist = User Exist
 
 #Student
 message.student.fullCourse = Full course in this semester!
