[UPDATE] - Update lecturer and register

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,7 +2,7 @@
 message.token.InvalidToken= Invalid Token!
 
 #User
-message.user.Wrong = Username {0} or password wrong!
+message.user.Wrong = Wrong user!
 message.user.Invalid = User invalid!
 message.user.NotFound = User not found!
 message.user.Exist = User Exist
