--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,38 +2,42 @@
 message.token.InvalidToken= Invalid Token!
 
 #User
-message.user.Wrong = Wrong user!
-message.user.Invalid = User invalid!
-message.user.NotFound = User not found!
-message.user.Exist = User Exist
+message.user.Wrong = Sai thông tin tài khoản!
+message.user.WrongPass = Sai mật khẩu!
+message.user.Invalid = Người dùng không phù hợp!
+message.user.NotFound = Không tìm thấy người dùng!
+message.user.Exist = Người dùng đã tồn tại!
 
 #Student
-message.student.fullCourse = Full course in this semester!
-message.student.Registered = Exist course was registered before!
-message.student.PaymentResolved = Student was resolved this payment!
+message.student.fullCourse = Khóa học đã đầy trong học kì này!
+message.student.Registered = Khóa học đã được đăng ký trước đó!
+message.student.PaymentResolved = Sinh viên đã thanh toán!
 
 #Course
-message.course.exists = Course {0} was existed!
-message.course.NotFound = Course not found!
+message.course.exists = Khóa học {0} đã tồn tại!
+message.course.NotFound = Không tìm thấy khóa học!
 
 #Semester
-message.semester.exists = Semester {0} was existed!
-message.semester.NotFound = Semester not found!
-message.semester.Invalid = Semester Invalid!
-message.semester.NotDeleted = Semester can not deleted!
-message.semester.ExistTime = This time exist semester
+message.semester.exists = Học kì {0} đã tồn tại!
+message.semester.NotFound = Không tìm thấy học kì!
+message.semester.Invalid = Học kì không phù hợp!
+message.semester.DateInvalid = Ngày kết thúc không thể nhỏ hơn ngày bắt đầu!
+message.semester.NotDeleted = Không thể xóa học kì này!
+message.semester.ExistTime = Đã có học kì tồn tại trong khoảng thời gian này!
 
 #Class
-message.class.exists = Class {0} was existed!
-message.class.NotFound = Class not found!
-message.class.Invalid = Class Invalid!
-message.class.notDeleted = Class can not deleted!
+message.class.exists = Lớp học {0} đã tồn tại!
+message.class.NotFound = Không tìm thấy lớp học!
+message.class.Invalid = Lớp học không phù hợp!
+message.class.notDeleted = Không thể xóa lớp học!
 
 #OpenCourse
-message.openCourse.NotFound = Request Open Course not found!
-message.openCourse.FullSize = Request Open Course full size register!
+message.openCourse.NotFound = Lớp học không tìm thấy!
+message.openCourse.FullSize = Lớp học này đã đầy!
+message.openCourse.WasRegistered = Lớp này đã có người đăng ký!
+message.openCourse.WasRegisteredInAnotherClass = Giảng viên đã đăng ký lớp học khác trong ca làm việc này!
 
 #Tuition
-message.tuition.NotFound = Request fee not found!
-message.tuition.IsCompleted = Request fee completed
+message.tuition.NotFound = Không tìm thấy khoản thanh toán này!
+message.tuition.IsCompleted = Thanh toán này đã được hoàn thành!
 
