--- a/src/main/resources/messages_en_us.properties
+++ b/src/main/resources/messages_en_us.properties
@@ -9,7 +9,7 @@ message.user.NotFound = Không tìm thấy người dùng!
 message.user.Exist = Người dùng đã tồn tại!
 
 #Student
-message.student.fullCourse = Khóa học đã đầy trong học kì này!
+message.student.fullCourse = Bạn đã đăng ký đủ tín chỉ trong học kì này!
 message.student.Registered = Khóa học đã được đăng ký trước đó!
 message.student.PaymentResolved = Sinh viên đã thanh toán!
 
